fixed pertrusion of calc, added background + fixed contrast from background img

--- a/achievements/achievementsStyles.css
+++ b/achievements/achievementsStyles.css
@@ -51,6 +51,7 @@ nav>ul>li{
 
 main{
     width : 70%;
+    height:100vh;
     background-color: #FFE6D6;
 }
 
@@ -89,6 +90,9 @@ main{
     margin: 1vh 1vw;
 }
 
+nav ul li a{
+    text-decoration: none;
+}
 @media screen and (max-width: 750px) {
     header{
         align-items: center;
