--- a/projects/projectStyles.css
+++ b/projects/projectStyles.css
@@ -49,6 +49,7 @@ nav>ul>li{
 
 main{
     width : 70%;
+    height:100vh;
     background-color: #FFE6D6;
 }
 
@@ -82,6 +83,7 @@ main{
 }
 label{
     font-size:calc(1vw + 7px);
+    background-color: #FFE6D6;
 }
 
 /* https://www.w3schools.com/howto/howto_css_round_buttons.asp */
@@ -95,6 +97,7 @@ button{
 input{
     font-size: calc(14px + 0.5vw);
     background-color: #FFFFFF;
+    width:100%;
 }
 
 
@@ -110,7 +113,7 @@ input{
     font-size: calc(14px + 0.5vw);
     background-color: white;
     border: 2px solid black;
-    width:310px;
+    width:80%;
     height:30px;
 }
 
@@ -124,6 +127,11 @@ input{
 #actualcalc{
     border: 2px solid black;
     padding:20px 10px 50px 10px;
+    background-image: url(../src/calc_background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width:100%;
 }
 
 #inputs{
@@ -137,7 +145,14 @@ input{
 
 #result{
     font-size:calc(1vw + 7px);
+    background-color: #FFE6D6;
+    display: inline;
 }
+
+nav ul li a{
+    text-decoration: none;
+}
+
 @media screen and (max-width: 750px) {
     header{
         align-items: center;
@@ -173,4 +188,8 @@ input{
         font-size: calc(4px + 3vw);
     }
 
+    #answer{
+        width:100%;
+
+    }
 }
